k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checkout-now
  labels:
    name: checkout-now
    app: checkout-management
